[project]
name = "20-questions"
version = "0.1.0"
description = "A 20 questions game implementation"
authors = [
    {name = "Damian Bogunowicz", email = "damian.bogunowicz@gmail.com"},
]
dependencies = [
    "openai-agents<=0.0.3",
    "pydantic>=2.0.0,<3.0.0", 
    "colorama>=0.4.0,<0.5.0",
    "fire>=0.5.0,<0.6.0",
]
requires-python = ">=3.12"
